# ELETRONICA-IOT-

./: desktop.ini
CMake/01_LED_BLINK/: CMakeLists.txt  main.c
CMake/02_PRINT_SERIAL/: CMakeLists.txt  main.c
CMake/03_CORE_TEMPERATURE/: CMakeLists.txt  main.c
CMake/04_CORE_TO_MQTT/: main.c
CMake/05_ATUADORES_ATIVACAO_SENTIDO-GIRO/: CMakeLists.txt  main.c
CMake/06_ATUADORES_PWM/: main.c
CMake/07_ATUADORES_MQTT/: CMakeLists.txt  main.c
CMake/08_BLUETOOTH/__MACOSX/exemplo-aula/: ._CMakeLists.txt  ._btstack_config.h
CMake/08_BLUETOOTH/__MACOSX/exemplo-aula/vendors/: ._CMakeLists.txt
CMake/08_BLUETOOTH/__MACOSX/exemplo-aula/vendors/rpi-pico-mpu6050/: ._CMakeLists.txt  ._LICENSE
CMake/08_BLUETOOTH/__MACOSX/exemplo-aula/vendors/rpi-pico-mpu6050/example/: ._CMakeLists.txt
CMake/08_BLUETOOTH/__MACOSX/exemplo-aula/vendors/rpi-pico-mpu6050/src/: ._CMakeLists.txt
CMake/08_BLUETOOTH/exemplo-aula/: CMakeLists.txt  MPU_6050_GATT.gatt  main.c
